--- a/package.json
+++ b/package.json
@@ -20,6 +20,8 @@
   },
   "homepage": "https://github.com/yanful/game#readme",
   "dependencies": {
+    "p5": "^1.5.0",
+    "p5.play": "^3.5.20",
     "three": "^0.149.0"
   },
   "devDependencies": {
